# Rust-Web

./: .gitignore  Cargo.toml  README.md
db/: .env  Cargo.toml
db/src/: main.rs
http/src/: httpresponse.rs
httpserver/: Cargo.toml
httpserver/public/: 404.html  index.html
httpserver/src/: handle.rs  main.rs  server.rs
servers/http/src/: httprequest.rs  httpresponse.rs
servers/httpserver/data/: orders.json
servers/httpserver/public/: health.html  styles.css
servers/httpserver/src/: router.rs
tcpclient/src/: main.rs
tcpserver/src/: main.rs
ws/: Cargo.toml
ws/webapp/: Cargo.toml
ws/webapp/src/: errors.rs  handlers.rs  models.rs  routers.rs
ws/webapp/static/: register.html  teachers.html
ws/webapp/static/css/: register.css
ws/webservice/: Cargo.toml
ws/webservice/src/: db_access.rs  errors.rs  handlers.rs  models.rs  routers.rs  state.rs
ws/webservice/src/dbaccess/: course.rs  teacher.rs
ws/webservice/src/handlers/: course.rs  teacher.rs
ws/webservice/src/models/: course.rs  teacher.rs
